# rules_extras

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum
example/: BUILD.bazel  Makefile  go.mod
example/api/: BUILD.bazel
example/api/etcd/v1alpha1/: BUILD.bazel  doc.go
example/client/versioned/: clientset.go
example/client/versioned/fake/: clientset_generated.go  register.go
example/client/versioned/scheme/: register.go
example/client/versioned/typed/etcd/v1alpha1/: etcd_client.go  etcdcluster.go
example/client/versioned/typed/etcd/v1alpha1/fake/: fake_etcd_client.go  fake_etcdcluster.go
example/cmd/hello/: BUILD.bazel  main.go
example/informers/externalversions/: factory.go  generic.go
example/informers/externalversions/etcd/: interface.go
example/informers/externalversions/etcd/v1alpha1/: etcdcluster.go  interface.go
example/informers/externalversions/internalinterfaces/: factory_interfaces.go
example/listers/etcd/v1alpha1/: etcdcluster.go
example/patches/: example.patch
go/: BUILD.bazel  code-generator-deps.bzl  code-generator.bash  controller-gen.bash  controller-tools.bzl  deps.bzl  gen.bzl  grpc.bzl  vendor.bash  vendor.bzl
scripts/: import-code-generator.sh  import-controller-tools.sh
