load("//go:gen.bzl", "k8s_code_generator")

k8s_code_generator(
    name = "gen",
    srcs = [
        "//example/api/etcd/v1alpha1",
    ],
    clientpackage = "go.f110.dev/rules_extras/example/client",
    crd = "example/config/crd",
    header = "//example/hack:boilerplate.go.txt",
    informerpackage = "go.f110.dev/rules_extras/example/informers",
    listerpackage = "go.f110.dev/rules_extras/example/listers",
    no_gazelle = True,
)
